--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.admin.myapplication.MainActivity"
-    android:id="@+id/ENJOY"
-    android:background="#E1BEE7">
+    android:background="#FFF8">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HAPPY BIRTHDAY FRIEND"
+        android:textColor="#EEFF41"
+        android:textSize="40sp"
+        android:background="#FF80AB" \>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="450dp"
-        android:src="@drawable/lelo"/>
+        android:src="@drawable/mpumeleloh"
+        android:layout_width="400dp"
+        android:layout_height="500dp"
+        android:scaleType="fitCenter"
+        android:id="@+id/imageView" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="happy birthday"
-        android:textSize="50sp"
-        android:textColour="#DCE775"
-        android:background="#95254B0" />
+        android:text="WISH YOU MAY SEE MORE MANY YEARS TO COME!!"
+        android:background="#FF80AB"
+        android:textStyle="italic"
+        android:textSize="25sp"
+        android:textColor="#EEFF41"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
